--- a/Landing Page - Login/index.html
+++ b/Landing Page - Login/index.html
@@ -637,8 +637,7 @@ From stunning nails to a rejuvenating spa day, our clients are leaving with glow
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="mb-4" data-aos="fade-up" data-aos-delay="200">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3866.482330045967!2d120.99543611000085!3d14.283385084707984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397d73b9a7e21e1%3A0xc5e0e5705048ea34!2sArribah*21%20Salon!5e0!3m2!1sen!2sph!4v1733239864155!5m2!1sen!2sph" width="1300" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        </div><!-- End Google Maps -->
-
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3866.346631226551!2d121.00305121210486!3d14.29128144960796!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397d70033241845%3A0xd435db8af3b6dd7b!2sArribah*21%20Salon%20and%20Supplies!5e0!3m2!1sen!2sph!4v1733390762169!5m2!1sen!2sph" width="1300" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        </div><!-- End Google Maps -->
         <div class="row gy-4">
 
           <div class="col-lg-4">
