--- a/inventory.html
+++ b/inventory.html
@@ -108,11 +108,11 @@
                                 </div>
 
                                 <div class="col-12 col-lg-6">
-                                    <div class="card">
+                                    <div class="card" style="overflow:scroll">
                                         <div class="card-header">
                                             <h4>Product Types</h4>
                                         </div>
-                                        <div class="card-body">
+                                        <div class="card-body" style="min-width:400px;min-height:200px">
                                             <canvas id="stockTypes"></canvas>
                                         </div>
                                     </div>
@@ -121,32 +121,23 @@
 
                             
                             <div class="row">
-                                <!-- <div class="col-12">
-                                    <div class="card">
-                                        <div class="card-header">
-                                            <h4>Inventory Value</h4>
-                                        </div>
-                                        <div class="card-body">
-                                            <canvas id="graph-inventory-value"></canvas>
-                                        </div>
-                                    </div>
-                                </div> -->
+                                
                                 <div class="col-12 col-lg-6">
-                                    <div class="card">
+                                    <div class="card" style="overflow:scroll">
                                         <div class="card-header">
                                             <h4>Inventory Value</h4>
                                         </div>
-                                        <div class="card-body">
+                                        <div class="card-body" style="min-width:400px;min-height:200px">
                                             <canvas id="graph-inventory-value"></canvas>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-12 col-lg-6">
-                                    <div class="card">
+                                    <div class="card" style="overflow:scroll">
                                         <div class="card-header">
                                             <h4>Stock Overview</h4>
                                         </div>
-                                        <div class="card-body">
+                                        <div class="card-body overflow-auto" style="min-width:400px;min-height:200px">
                                             <canvas id="graph-stock-overview"></canvas>
                                         </div>
                                     </div>
@@ -156,11 +147,11 @@
 
                             <div class="row">
                                 <div class="col-12">
-                                    <div class="card">
+                                    <div class="card" style="overflow:scroll">
                                         <div class="card-header">
                                             <h4>Stock Movement</h4>
                                         </div>
-                                        <div class="card-body">
+                                        <div class="card-body overflow-auto" style="min-width:500px;min-height:250px">
                                             <canvas id="chart-stock-movement"></canvas>
                                         </div>
                                     </div>
