--- a/inventory.html
+++ b/inventory.html
@@ -53,12 +53,12 @@
                             </a>
                         </li>
 
-                        <li class="sidebar-item">
+                        <!-- <li class="sidebar-item">
                             <a href="" class='sidebar-link'>
                                 <i class="bi bi-cash-stack"></i>
                                 <span>Sales</span>
                             </a>
-                        </li>
+                        </li> -->
 
                         <li class="sidebar-title">Information</li>
 
@@ -183,7 +183,7 @@
                             </div>
                             
 
-                            <div class="row">
+                            <!-- <div class="row">
                                 <div class="col-12">
                                     <div class="card">
                                         <div class="card-header">
@@ -269,7 +269,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
 
                         </div>
                     </section>
