--- a/Landing Page - Login/login.html
+++ b/Landing Page - Login/login.html
@@ -82,7 +82,7 @@
                     <label for="email" class="form-label">Email address</label>
                     <div class="input-group">
                         <span class="input-group-text"><i class="bi bi-envelope-fill"></i></span>
-                        <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
+                        <input type="email" class="form-control" id="email" placeholder="Enter your email">
                     </div>
                 </div>
 
@@ -91,7 +91,7 @@
                     <label for="password" class="form-label">Password</label>
                     <div class="input-group">
                         <span class="input-group-text"><i class="bi bi-lock-fill"></i></span>
-                        <input type="password" class="form-control" id="password" placeholder="Enter your password" required>
+                        <input type="password" class="form-control" id="password" placeholder="Enter your password">
                     </div>
                 </div>
                 <!-- Keep me signed in -->
@@ -100,7 +100,9 @@
                     <label class="form-check-label" for="keepSignedIn">Keep me signed in</label>
                 </div>
 
-                <button type="submit" class="btn btn-primary w-100 login-btn mb-3">Login</button>
+                <a href="/inventory.html">
+                    <button type="submit" class="btn btn-primary w-100 login-btn mb-3">Login</button>
+                </a>
             </form>
            
         </div>
