--- a/Landing Page - Login/login.html
+++ b/Landing Page - Login/login.html
@@ -101,7 +101,7 @@
                 </div>
 
                 <a href="/inventory.html">
-                    <button type="submit" class="btn btn-primary w-100 login-btn mb-3">Login</button>
+                    <button type="submit" href="/inventory.html" class="btn btn-primary w-100 login-btn mb-3">Login</button>
                 </a>
             </form>
            
