--- a/Landing Page - Login/index.html
+++ b/Landing Page - Login/index.html
@@ -66,7 +66,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="login.html">Admin</a>
+      <a class="btn-getstarted" href="../index.html">Admin</a>
 
     </div>
   </header>
