--- a/inventory.html
+++ b/inventory.html
@@ -80,8 +80,11 @@
                 <a href="#" class="burger-btn d-block">
                     <i class="bi bi-justify fs-3"></i>
                 </a>
-                <div class="page-heading">
+                <div class="page-heading d-flex gap-3">
                     <h3>Inventory</h3>
+                    <button class="btn btn-primary" id="reset">
+                        <img src="assets/vendors/bootstrap-icons/arrow-repeat.svg" alt="Reset" style="width:20px;height:20px"> 
+                    </button>
                 </div>
                 <div class="page-content">
                     <section class="row">
@@ -308,6 +311,7 @@
     <!-- filepond -->
     <script src="https://unpkg.com/filepond/dist/filepond.js"></script>
 
+    <script src="utils.js"></script>
     <script src="assets/vendors/chartjs/Chart.min.js"></script>
     <script src="inv-chartjs.js"></script>
 
